@@ -42,6 +42,8 @@ def doTranslation(filename, syscallDirectories):
         conf = conf + "trace_stores=1,"
     if config.doOptimizeIndirectCalls:
         conf = conf + "prune_call_table=1,"
+    if config.doOptimizePruneStackStores:
+        conf = conf + "optimize_prune_stack_saves=1,"
     if config.threadSafe:
         conf = conf + "thread_safe=1,"
     if len(config.colocateFunctions) > 0:
